z-index adjustment to fix overlaying of slider arrows on primary nav (mobile)

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -3,7 +3,7 @@
     background: white;
     padding: $padding_horizontal 0;
     position: fixed;
-    z-index: 100;
+    z-index: 300;
     top: 0;
     left: 0;
     width: 100%;
